--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -4,7 +4,7 @@ body {
 
 .navbar {
   overflow: hidden;
-  background-color: #fff;
+  background-color: transparent; 
   font-family: Arial;
   position: fixed;
   top: 0;
@@ -56,9 +56,10 @@ body {
   display: none;
   position: absolute;
   background-color: #fff;
+  opacity:0.7;
   min-width: 160px;
   position: fixed;
-  top: 7%;
+  top: 6.5%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
