--- a/CSS/home.css
+++ b/CSS/home.css
@@ -17,11 +17,13 @@ body, html {
   h1 {
     font-family: 'Codystar';
     font-size: 4.25vw;
+    font-weight: bolder;
   }
   
   h3 {
     font-family: 'Codystar';
     font-size: 2.25vw;
+    font-weight: bold;
   }
 
   h4 {
