--- a/CSS/home.css
+++ b/CSS/home.css
@@ -12,6 +12,7 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: black;
   }
   
   h1 {
@@ -29,4 +30,21 @@ body, html {
   h4 {
     font-family: 'Codystar';
     font-size: 1vw;
+  }
+
+  .glow {
+    text-align: center;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+  }
+  
+  @-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #751132, 0 0 40px #751132, 0 0 50px #751132, 0 0 60px #751132, 0 0 70px #751132;
+    }
+    
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
   }
