--- a/CSS/DeltaGraph.css
+++ b/CSS/DeltaGraph.css
@@ -21,15 +21,15 @@
   }
   
   h1 {
-    padding-top: 5%;
+    padding-top: 7%;
     text-align: center;
     font-family: var(--second-font);
-    font-size: 140%;
+    font-size: 200%;
 }
 
 h2 {
     text-align: center;
-    padding-top: 3%;
+    padding-top: 1%;
     font-family: var(--second-font);
     font-size: 130%;
 }
@@ -44,3 +44,21 @@ p {
    text-align: center;
    font-family: var(--second-font);
 }
+
+.glow {
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #751132, 0 0 30px #751132, 0 0 40px #751132, 0 0 50px #751132, 0 0 60px #751132, 0 0 70px #751132;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+
