--- a/CSS/DeltaGraph.css
+++ b/CSS/DeltaGraph.css
@@ -58,7 +58,7 @@ p {
   }
   
   to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    text-shadow: 0 0 20px #fff, 0 0 30px #fee4ff, 0 0 40px #fee4ff, 0 0 50px #fee4ff, 0 0 60px #fee4ff, 0 0 70px #fee4ff, 0 0 80px #fee4ff;
   }
 }
 
