--- a/CSS/option.css
+++ b/CSS/option.css
@@ -28,7 +28,7 @@
 }
   
   .options {
-    margin-left: 14%;
+    margin-left: 2.5%;
   }
 
   .glow {
@@ -51,8 +51,10 @@
   .button {
     background-color: #751132;
     border: none;
+    font-size: 105%;
+    font-family: var(--second-font);
     color: white;
-    padding: 1% 7%;
+    padding: 1% 3%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
