--- a/CSS/home.css
+++ b/CSS/home.css
@@ -11,7 +11,7 @@ body, html {
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
-    background-size:100% auto;
+    background-size: cover;
     background-color: black;
   }
   
